--- a/index.html
+++ b/index.html
@@ -23,80 +23,30 @@
 												 <! -- left side above rightside below -->
 <aside class="aside">
 	<div class="Address-1">
-		<h1>Address Book-1</h1>
-	<form>
-		<div class="first-row">
-			<div class="first-block">
- 					<label for="fname">First name</label><br>
-  					<input type="text" id="first-name" name="fname" placeholder="First Name"><br>
-  					<label for="lname">Email Adress</label><br>
-  					<input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"><br><br>
-  					<span>Country</span><br>
-   			    <select  name="country">
-    		      <option disabled selected>Choose your country</option>
-    				  <option value="t1" >Ukraine</option>
-    				  <option value="t2">USA</option>
-    				  <option value="t3">Israel</option>
-    				  <option value="t4">France</option>
-   				</select>
-			</div>
-<div class="second-block">
-
- <label for="fname">Last name</label>
-  <input type="text" id="last-name" name="last-name" placeholder="Last Name"><br>
-
-  <label for="Phone-number">Phone number</label><br>
-  <input type="tel" id="Phone-number" class="Phone-number" name="Phone" limit="10"><br><br>
-
-  <label for="Adress">Adress</label>
-  <input type="text" id="Adress" name="Adress" placeholder="">
-  
-</div>
-</div>
-<div class="third-row">
-	<div class="third-row-element">
-	   <label for="city">City/Town</label>
-      <input class="city" type="text" id="City" name="City" value=" ">
-</div>
-<div class="third-row-element">
-	<label for="State">State</label><br>
-   				<select  name="State" class="state-select">
-    				<option disabled selected>Select</option>
-    				<option value="t1">Virginia</option>
-            <option value="t2">California</option>
-    				<option value="t3">Georgia</option>
-    				<option value="t4">Texas</option>
-    				<option value="t4">Virginia</option>
-   				</select>
-</div>
-    <div class="third-row-element">
-		    <label for="ZIP">ZIP code</label><br>
-          <input class="ZIP" type="text" id="ZIP" name="ZIP" value=" "><br><br>
+		<h1>My Orders</h1>
+		<div class="order-list">
+    <span class="span-order-list">Here will be your orders</span>  
+    <div class="add-button">
+        <div class="full-add-button"><span class="addText">Our Store</span></div>
+          <div class="button"><input type="submit" name=">" class="Store-button" value=">"></div>
+  </div>
+  <div class="login-div-cheker">
+      <span class="login-cheker">Please, check your log in status</span>
+  </div>
     </div>
 </div>
-<div class="fourth-row">
-      <div class="cancel-button">
-		    <button class="Cancel-button">Cancel</button>
-      </div>
-      <div class="add-button">
-        <div class="full-add-button"><span class="addText">Add</span></div>
-          <div class="button"><input type="submit" name=">" class="Add-button" value=">"></div>
-  </div>
-</div>
-</form>
-</div>
 <div class="Address-2">
-    <h1>Address Book-2</h1>
+    <h1>My Details</h1>
   <form>
     <div class="first-row">
       <div class="first-block">
-          <label for="fname">First name</label><br>
+          <label for="fname">My name is ..</label><br>
             <input type="text" id="first-name" name="fname" placeholder="First Name"><br>
-            <label for="lname">Email Adress</label><br>
+            <label for="lname">My Email Adress is..</label><br>
             <input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"><br><br>
             <span>Country</span><br>
             <select  name="country">
-              <option disabled selected>Choose your country</option>
+              <option disabled selected>I am from..</option>
               <option value="t1" >Ukraine</option>
               <option value="t2">USA</option>
               <option value="t3">Israel</option>
@@ -105,10 +55,10 @@
       </div>
 <div class="second-block">
 
- <label for="fname">Last name</label>
+ <label for="fname">My Last name is..</label>
   <input type="text" id="last-name" name="last-name" placeholder="Last Name"><br>
 
-  <label for="Phone-number">Phone number</label><br>
+  <label for="Phone-number"> Phone number is..</label><br>
   <input type="tel" id="Phone-number" class="Phone-number" name="Phone" limit="10"><br><br>
 
   <label for="Adress">Adress</label>
@@ -149,7 +99,7 @@
 </form>
 </div>
 <div class="Address-3">
-    <h1>Address Book-3</h1>
+    <h1>Address Book</h1>
   <form>
     <div class="first-row">
       <div class="first-block">
@@ -212,66 +162,14 @@
 </form>
 </div>
 <div class="Address-4">
-    <h1>Address Book-4</h1>
+    <h1>Sign Out</h1>
   <form>
-    <div class="first-row">
-      <div class="first-block">
-          <label for="fname">First name</label><br>
-            <input type="text" id="first-name" name="fname" placeholder="First Name"><br>
-            <label for="lname">Email Adress</label><br>
-            <input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"><br><br>
-            <span>Country</span><br>
-            <select  name="country">
-              <option disabled selected>Choose your country</option>
-              <option value="t1" >Ukraine</option>
-              <option value="t2">USA</option>
-              <option value="t3">Israel</option>
-              <option value="t4">France</option>
-          </select>
-      </div>
-<div class="second-block">
-
- <label for="fname">Last name</label>
-  <input type="text" id="last-name" name="last-name" placeholder="Last Name"><br>
-
-  <label for="Phone-number">Phone number</label><br>
-  <input type="tel" id="Phone-number" class="Phone-number" name="Phone" limit="10"><br><br>
-
-  <label for="Adress">Adress</label>
-  <input type="text" id="Adress" name="Adress" placeholder="">
-  
-</div>
-</div>
-<div class="third-row">
-  <div class="third-row-element">
-     <label for="city">City/Town</label>
-      <input class="city" type="text" id="City" name="City" value=" ">
-</div>
-<div class="third-row-element">
-  <label for="State">State</label><br>
-          <select  name="State" class="state-select">
-            <option disabled selected>Select</option>
-            <option value="t1">Virginia</option>
-            <option value="t2">California</option>
-            <option value="t3">Georgia</option>
-            <option value="t4">Texas</option>
-            <option value="t4">Virginia</option>
-          </select>
-</div>
-    <div class="third-row-element">
-        <label for="ZIP">ZIP code</label><br>
-          <input class="ZIP" type="text" id="ZIP" name="ZIP" value=" "><br><br>
-    </div>
-</div>
-<div class="fourth-row">
-      <div class="cancel-button">
-        <button class="Cancel-button">Cancel</button>
+          <div class="cancel-button">
+        <button class="Cancel-button">Log Out</button>
       </div>
       <div class="add-button">
-        <div class="full-add-button"><span class="addText">Add</span></div>
+        <div class="full-add-button"><span class="addText">Log In</span></div>
           <div class="button"><input type="submit" name=">" class="Add-button" value=">"></div>
-  </div>
-</div>
 </form>
 </div>
 </aside>
