--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="first-row">
       <div class="first-block">
           <label for="fname">My name is ..</label><br>
-            <input type="text" id="first-name" name="fname" placeholder="First Name"><br>
+            <input type="text" id="first-name" name="fname" placeholder="First Name"/><br>
             <label for="lname">My Email Adress is..</label><br>
-            <input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"><br><br>
+            <input type="email" id="email" class="email" name="email" placeholder="name.example@gmail.com"/><br><br>
             <span>Country</span><br>
             <select  name="country">
               <option disabled selected>I am from..</option>
